# serviciser

./: .gitignore  LICENSE  README.md  cli.py  hello_world.py  ideas.md  pyproject.toml
.github/workflows/: pipeline.yml
cli/: .babelrc  .gitignore  app.py  app.ts  build_cli.sh  cli.py  cli.spec  inquirer.rb  jinja_handler.py  package.json  pyproject.toml  setup.py  zip_templates.sh
cli/test/: test_jinja_handler.py
cli/test/test_templates/: template.py
pipeline/: build_cli.sh  main_package_cli.sh  package_cli.sh  sub_1_zip_templates.sh  sub_2_build_cli.sh
templates/aws_lambda/typescript/lib/: lambda-stack.ts
templates/event-driven/aws_lambda/typescript/: README.md
templates/event-driven/aws_lambda/typescript/lib/: lambda-stack.ts
templates/request-response/aws_lambda/typescript/: package.json
templates/request-response/aws_lambda/typescript/lib/: lambda-stack.ts
templates/request-response/aws_lambda/typescript/src/: hello-function.ts
templates/request-response/aws_lambda/typescript/test/cdk-lib/: lambda.test.ts
templates/request-response/aws_lambda/typescript/test/src/: hello-function.test.ts
templates/typescript/lambda/: cdk.json  package.json
templates/typescript/lambda/lib/: lambda-stack.ts
templates/typescript/lambda/src/: hello-function.ts
templates/typescript/lambda/test/: lambda.test.ts
templates/typescript/lambda/test/cdk-lib/: lambda.test.ts
templates/typescript/lambda/test/src/: hello-function.test.ts
