

[tool.poetry]
name = "serviciser"
version = "1.0.0"
description = "CLI tool for initialising new services"
authors = ["bhq12"]
packages = [{ include = "cli"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
inquirer = "^3.1.3"
pyinstaller = "^6.2.0"

[tool.poetry.scripts]
serviciser = "cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
